# NWF

./: .gitignore  export_structure.py  git_health_check.bat  git_health_check_ssh.bat  project_structure.txt  pyproject.toml  run_story_sample.py
data/schema/: dsl_condition_schema.json  metadata_schema.json
docs/: DEVELOPMENT_GUIDELINES.md  NWF_ARCHITECTURE_v0.2.md
docs/guides/: NWF_AI_Knowledge_Architecture_v2.0.0.md  NWF_AI_Knowledge_Architecture_v2.0.1.md  NWF_GitHub_Sync_Spec_v2.0.0.md  NWF_GitHub_Sync_Spec_v2.0.1.md
docs/project/: NWF_Development_Roadmap_v1.0.0.md  NWF_Development_Roadmap_v2.0.1.md  NWF_Implementation_Plan_v2.0.1.md  NWF_Phase_3.5_Debug_Work_Plan_v20260427.md  NWF_Phase_3.5_Debug_Work_Plan_v20260502.md  NWF_Phase_3.5_Debug_Work_Plan_v20260516.md  NWF_Phase_3.5_Debug_Work_Plan_v20260519.md  NWF_Phase_3.5_Debug_Work_Plan_v20260520.md  NWF_Phase_3.5_Debug_Work_Plan_v20260524.md  NWF_Phase_3.5_Debug_Work_Plan_v20260525.md  NWF_Phase_3.5_Work_Plan_v20260424.md  (+2 more)
nwf/: test_thread_engine.py  thread_engine.py
secrets/: .env
tests/: audit_spec_loader.py  integration_phase_2_2.py  integration_phase_2_3.py  integration_phase_2_4.py  integration_phase_2_5.py  integration_phase_2_6.py  integration_phase_2_7.py  integration_phase_2_8.py  integration_phase_3_1_final.py  integration_phase_3_2_temporal.py  integration_phase_3_3_engine.py  integration_phase_3_4_validator.py  integration_phase_3_5_world_rules.py
tmp/: nwf_integration_test.py  nwf_test_clean.py  raw_out.txt  result.txt  result2.txt  test_output.txt
tools/: nwf_git_guard.bat
(+319 files in other folders)
